--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.441.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
